@@ -1,3 +1,10 @@
+2010-06-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * src/ao_xmltagging.c:
+   Only use part of inserted tag until first white space character for
+   closing tag so e.g. inserting 'span class=foo"' is working properly.
+
+
 2010-05-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/addons.c:
